Fixes Center-Aligned images in posts

--- a/wp-content/themes/andrewheins/_assets/css/640.less
+++ b/wp-content/themes/andrewheins/_assets/css/640.less
@@ -53,7 +53,7 @@
 		
 		.aligncenter, .alignleft, .alignright {
 			margin-bottom: 0;
-			width: auto;	
+			width: auto !important;	
 		}
 		
 		.alignleft {
