--- a/wp-content/themes/andrewheins/_assets/css/typography.less
+++ b/wp-content/themes/andrewheins/_assets/css/typography.less
@@ -149,7 +149,7 @@ em, .em {
 		display: block;
 		margin-top: @content-spacing + 8px;
 		
-		width: 100%;
+		width: 100% !important;
 		height: auto;
 		
 		margin-bottom: @content-spacing;
